# prospect

./: .gitignore  CMakeLists.txt  LICENSE  README.md  _config.yml  config.rviz  package.xml  requirements.txt  set_params.py
.github/workflows/: pages.yml
CAD/STEP/: Bottom_Platform.STEP  Crank_Arm.STEP  Electronics_Enclosure.STEP  Electronics_Enclosure_Adapter.STEP  Electronics_Lid.STEP  Top_Platform.STEP  (+2 more)
arduino/: stewart_sensor.ino
config/: robot_calibration.yaml
data/: bounce_verification_2.json  bounce_verification_looks_good.json  circle_verification_2.json  circle_verification_weird_tilt.json  kinematics_random_verification_data.json  kinematics_verification_data.json
docs/: _config.yml  assembly_instructions.md  bill_of_materials.md  index.md
launch/: master.launch  param.launch
matlab/: StewartPlatformModel.slx  StewartPlatformModel.slx.autosave  StewartPlatformModel.slx.original  StewartPlatformModel.slxc  StewartPlatformScript.mlx  rotMatrix.mlx  stewart_cad.SLDASM
msg/: CoordinateData.msg  TOFSensorValues.msg
scripts/: broadcast_platform_zero_transform.py  compute_motor_angles.py  findSurfaceNormalTransform.py  main.py  move_to_motor_angles.py  moveit.py  optitrack_random_validation.py  optitrack_validation.py  raster_plan_generator.py  tof_triad.py  zero_platform_and_record_origin_tf.py
srv/: ComputeMotorAngles.srv  Light.srv  PlayPen.srv  StewartControl.srv
tests/: align_to_surface_normal_test_ali.py  test_bounce.py  test_circle.py  test_circle_inward.py  test_circle_outward.py  test_compute_motor_angles.py  test_surface_normal.py
(+22 files in other folders)
